# SCD

./: CMakeLists.txt  README.md
include/common/: time.h  types.h
include/communities/: communities.h
include/graph/: graph.h
include/wcc/: wcc.h
source/: main.cpp  main.cpp.orig
source/common/: time.cpp
source/communities/: .communities.cpp.swp  communities.cpp
source/graph/: graph.cpp
source/wcc/: wcc.cpp
tools/cc/: CMakeLists.txt
tools/cc/source/: main.cpp
tools/communityAnalyzer/: CMakeLists.txt
tools/communityAnalyzer/source/: main.cpp  main.cpp.backup
tools/f1score/: CMakeLists.txt
tools/f1score/source/: main.cpp
tools/selector/: CMakeLists.txt
tools/selector/source/: main.cpp
tools/wcc/: CMakeLists.txt
tools/wcc/source/: main.cpp
