
SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g -pg -fopenmp")	
SET(CMAKE_CXX_FLAGS_RELEASE "-O3 -fopenmp -DNDEBUG")	

INCLUDE_DIRECTORIES(../../include)
AUX_SOURCE_DIRECTORY(./source SOURCE_FILES)
AUX_SOURCE_DIRECTORY(../../source/communities SOURCE_FILES)
AUX_SOURCE_DIRECTORY(../../source/wcc SOURCE_FILES)
AUX_SOURCE_DIRECTORY(../../source/graph SOURCE_FILES)
AUX_SOURCE_DIRECTORY(../../source/common SOURCE_FILES)
ADD_EXECUTABLE(communityAnalyzer ${SOURCE_FILES})	
